--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Syscomn</title>
+  <title>Syscomn - Sistema Integrado de Soluções para Confinamentos de Cria e Recria 
+    Automatizando suas Funcionalidades.
+    </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
